--- a/app_condominio/templates/index.html
+++ b/app_condominio/templates/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'app_condominio/css/style.css' %}">
+    <title>Home</title>
 </head>
 <body>
-    <h1>
+    <div class="container">
+        <img src="{% static 'app_condominio/img/male4.png' %}" class="img-responsive" alt="...">
+        <form action="{% url 'save' %}" method="POST" class="formLogin"> 
+            {% csrf_token%}
+            <div class="alignIcons">
+                <img src="{% static 'app_condominio/img/avatar-de-perfil.png' %}" alt="" class="icon">
+                <input type="text" name="name" class="inputLogin" placeholder="Nome Completo">
+            </div>
+            <div class="alignIcons">
+                <img src="{% static 'app_condominio/img/o-email.png' %}" alt="" class="icon">
+                <input type="email" name="email" class="inputLogin" placeholder="email@email.com">
+            </div>
+            <div class="alignIcons">
+                <img src="{% static 'app_condominio/img/chave.png' %}" alt="" class="icon">
+                <input type="password" name="password" class="inputLogin" placeholder="xxxxxxxxxxx">
+            </div>
+            
+            <div class="alignIcons">
+                <img src="{% static 'app_condominio/img/chave.png' %}" alt="" class="icon">
+                <input type="password" name="repassword" class="inputLogin" placeholder="xxxxxxxxxxx">
+            </div>
+            <button type="submit" class="buttonLogin">Criar</button>
+        </form>
+
         <ul>
-            {%for user in users%}
+            {%for user in Users%}
                 <li>
                     {{user.id}} - {{user.name}}
                 </li>
             {%endfor%}
         </ul>
-        <form action="{% url 'save' %}" method="POST">
-            {% csrf_token%}
-            <input type="text" name="name">
-            <button type="submit">Criar</button>
-        </form>
-
-    </h1>
+    </div>
 </body>
 </html>
